--- a/home.html
+++ b/home.html
@@ -1,7 +1,19 @@
 <html>
-    <body style="width:400px;height:400px;background-color: blueviolet">
+    <head>
+    
+    <title>Quick StackOverflow</title>
+   <link rel="stylesheet" href="./css/styles.css" />
+   <link rel="stylesheet" href="./css/materialize.css" />
+   
+   <script src="./js/jquery-3.3.1.min.js"></script>
+   <script src="./js/materialize.min.js"></script>
+    </head>
+
+    <body>
         <h2>
             This is home.
         </h2>
+
+        <script type="text/javascript" src="./js/main.js"></script>
     </body>
 </html>
