added some helper js

--- a/home.html
+++ b/home.html
@@ -7,13 +7,17 @@
    
    <script src="./js/jquery-3.3.1.min.js"></script>
    <script src="./js/materialize.min.js"></script>
-    </head>
+   <script src="./js/axios.min.js"></script>
+
+   </head>
 
     <body>
         <h2>
             This is home.
         </h2>
 
+        <script type="text/javascript" src="./js/parser.js"></script>
+        <script type="text/javascript" src="./js/http.js"></script>
         <script type="text/javascript" src="./js/main.js"></script>
     </body>
 </html>
