--- a/home.html
+++ b/home.html
@@ -1,23 +1,37 @@
 <html>
-    <head>
-    
+
+<head>
+
     <title>Quick StackOverflow</title>
-   <link rel="stylesheet" href="./css/styles.css" />
-   <link rel="stylesheet" href="./css/materialize.css" />
-   
-   <script src="./js/jquery-3.3.1.min.js"></script>
-   <script src="./js/materialize.min.js"></script>
-   <script src="./js/axios.min.js"></script>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/materialize.css" />
 
-   </head>
+    <script src="./js/jquery-3.3.1.min.js"></script>
+    <script src="./js/materialize.min.js"></script>
+    <script src="./js/axios.min.js"></script>
 
-    <body>
-        <h2>
-            This is home.
-        </h2>
+</head>
 
-        <script type="text/javascript" src="./js/parser.js"></script>
-        <script type="text/javascript" src="./js/http.js"></script>
-        <script type="text/javascript" src="./js/main.js"></script>
-    </body>
+<body class="container blue lighten-4">
+
+    <div class="search-bar valign-wrapper row">
+
+        <div class="input-field col s6">
+            <input id="search_text" type="text">
+        </div>
+
+        <div class="col s6">
+
+            <button class="btn waves-effect waves-light" type="submit" name="action">
+                Search
+            </button>
+
+        </div>
+    </div>
+
+    <script type="text/javascript" src="./js/parser.js"></script>
+    <script type="text/javascript" src="./js/http.js"></script>
+    <script type="text/javascript" src="./js/main.js"></script>
+</body>
+
 </html>
