--- a/home.html
+++ b/home.html
@@ -6,9 +6,9 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/materialize.css" />
 
-    <script src="./js/jquery-3.3.1.min.js"></script>
-    <script src="./js/materialize.min.js"></script>
-    <script src="./js/axios.min.js"></script>
+    <script src="./js/lib/jquery-3.3.1.min.js"></script>
+    <script src="./js/lib/materialize.min.js"></script>
+    <script src="./js/lib/axios.min.js"></script>
 
 </head>
 
