created logic for next,prev page and created dom.js to dev factory method for document manupulation

--- a/home.html
+++ b/home.html
@@ -22,7 +22,9 @@
             <input type="text" id="search-input" />
             <button type="button" id="search-button">Search</button>
         </div>
-
+        <div id="question-title">
+            
+        </div>
         <div class="row">
             <div class="col s1" id="previous-button">
                 &lt;
@@ -42,6 +44,7 @@
     </div>
     <script type="text/javascript" src="./js/parser.js"></script>
     <script type="text/javascript" src="./js/http.js"></script>
+    <script type="text/javascript" src="./js/dom.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
 </body>
 
