--- a/home.html
+++ b/home.html
@@ -20,16 +20,17 @@
 
     <div id="container">
 
-        <div id="search-header">
+        <div id="search-header" >
             <div class="row">
                 <div class="col s12">
                     <div class="card blue-grey darken-1">
                         <div class="card-content white-text">
                             <span class="card-title"> Chrome Stack Search</span>
-                            <input type="text" id="search-input" placeholder="Stuck in a problem? Search here !!!"/>
+                            <input type="text" id="search-input" placeholder="Stuck in a problem? Search here !!!" />
                         </div>
                         <div class="card-action">
-                                <button type="button" class="waves-effect waves-light btn-small" id="search-button">Search</a>                          
+                            <button type="button" class="waves-effect waves-light btn-small"
+                                id="search-button">Search</a>
                         </div>
                     </div>
                 </div>
@@ -37,21 +38,28 @@
 
         </div>
 
-        <div id="question-title">
-
-        </div>
-        <div id="content-after-search" style="display:none;">
+        <div id="content-after-search" class="block-hidden">
+            <div class="row">
+                <div class="col s12 after-search-header">
+                    <span class="white-text" id="search-query">
+                        Search Query
+                    </span>
+                    <div class="card blue-grey darken-1">
+                            <div class="card-content white-text">
+                              <span class="card-title yellow-text" id="question-title">
+                                  Question Title
+                                </span>
+                                <div id="question-content">
+                                    
+                                </div>
+                            </div>
+                          </div>
+                </div>
+            </div>
             <div class="row">
                 <div class="col s12 m6">
-                    <div class="card blue-grey darken-1">
-                        <div class="card-content white-text">
-                            <span class="card-title">Card Title</span>
-                            <p>I am a very simple card. I am good at containing small bits of information.
-                                I am convenient because I require little markup to use effectively.</p>
-                        </div>
-                        <div class="card-action">
-                            <a href="#">Visit SO</a>
-                        </div>
+                    <div id="answer-list">
+
                     </div>
                 </div>
             </div>
