--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
 
         <div id="content-after-search" class="block-hidden">
             <div class="row">
-                <div class="col s12 after-search-header">
+                <div class="col s12">
                     <span class="white-text" id="search-query">
                         Search Query
                     </span>
@@ -50,7 +50,7 @@
                                   Question Title
                                 </span>
                                 <div id="question-content">
-                                    
+
                                 </div>
                             </div>
                           </div>
