--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" href="./css/materialize.css" />
 
-    <script src="./js/lib/jquery-3.3.1.min.js"></script>
+   <script src="./js/lib/jquery-3.3.1.min.js"></script>
     <script src="./js/lib/materialize.min.js"></script>
     <script src="./js/lib/axios.min.js"></script>
 
@@ -20,7 +20,7 @@
 
     <div id="container">
 
-        <div id="search-header" >
+        <div id="search-header">
             <div class="row">
                 <div class="col s12">
                     <div class="card blue-grey darken-1">
@@ -39,25 +39,25 @@
         </div>
 
         <div id="content-after-search" class="block-hidden">
-            <div class="row">
+            <div class="row" style="margin-bottom: 0px;">
                 <div class="col s12">
                     <span class="white-text" id="search-query">
                         Search Query
                     </span>
                     <div class="card blue-grey darken-1">
-                            <div class="card-content white-text">
-                              <span class="card-title yellow-text" id="question-title">
-                                  Question Title
-                                </span>
-                                <div id="question-content">
+                        <div class="card-content white-text">
+                            <span class="card-title yellow-text" id="question-title">
+                                Question Title
+                            </span>
+                            <div id="question-content">
 
-                                </div>
                             </div>
-                          </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col s12 m6">
+                <div class="col s12">
                     <div id="answer-list">
 
                     </div>
@@ -75,6 +75,8 @@
     <script type="text/javascript" src="./js/http.js"></script>
     <script type="text/javascript" src="./js/dom.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
+
+    <script type="text/javascript" src="./js/lib/microlight.js"></script>
 </body>
 
 </html>
