--- a/home.html
+++ b/home.html
@@ -37,20 +37,6 @@
             </div>
 
         </div>
-        <ul class="collapsible">
-            <li>
-              <div class="collapsible-header"><i class="material-icons">filter_drama</i>First</div>
-              <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-            </li>
-            <li>
-              <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
-              <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-            </li>
-            <li>
-              <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
-              <div class="collapsible-body"><span>Lorem ipsum dolor sit amet.</span></div>
-            </li>
-          </ul>
           
         <div id="content-after-search" class="block-hidden">
             <div class="row" style="margin-bottom: 0px;">
@@ -58,22 +44,9 @@
                     <span class="white-text" id="search-query">
                         Search Query
                     </span>
-                    <div class="card blue-grey darken-1">
-                        <div class="card-content white-text">
-                            <span class="card-title yellow-text" id="question-title">
-                                Question Title
-                            </span>
-                            <div id="question-content">
-
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col s12">
-                    <div id="answer-list">
-
+                    <div>
+                        <ul class="collapsible" id="collapsible-content">
+                        </ul>
                     </div>
                 </div>
             </div>
