added fab and modified loader css

--- a/home.html
+++ b/home.html
@@ -52,6 +52,17 @@
             </div>
         </div>
     </div>
+    <div class="fixed-action-btn">
+        <a class="btn-floating btn-large red">
+          <i class="large material-icons">list</i>
+        </a>
+        <ul>
+          <li><a class="btn-floating  red"><i class="material-icons" id="button-back">arrow_back_ios</i></a></li>
+          <li><a class="btn-floating  yellow darken-1" id="button-setting"><i class="material-icons">settings</i></a></li>
+          <li><a class="btn-floating  green" id="button-bookmark"><i class="material-icons">bookmark</i></a></li>
+          
+        </ul>
+      </div>
     <script type="text/javascript" src="./js/parser.js"></script>
     <script type="text/javascript" src="./js/http.js"></script>
     <script type="text/javascript" src="./js/dom.js"></script>
