developed drop down functionality

--- a/home.html
+++ b/home.html
@@ -26,7 +26,9 @@
                     <div class="card blue-grey darken-1">
                         <div class="card-content white-text">
                             <span class="card-title"> Chrome Stack Search</span>
-                            <input type="text" id="search-input" placeholder="Stuck in a problem? Search here !!!" />
+                                <div class="input-field">
+                            <input type="text" id="search-input" placeholder="Stuck in a problem? Search here !!!" class="autocomplete" />
+                            </div>
                         </div>
                         <div class="card-action">
                             <button type="button" class="waves-effect waves-light btn-small"
@@ -64,6 +66,7 @@
         </ul>
       </div>
     <script type="text/javascript" src="./js/parser.js"></script>
+    <script type="text/javascript" src="./js/preferences.js"></script>
     <script type="text/javascript" src="./js/http.js"></script>
     <script type="text/javascript" src="./js/dom.js"></script>
     <script type="text/javascript" src="./js/main.js"></script>
