--- a/setting_page.html
+++ b/setting_page.html
@@ -8,7 +8,8 @@
 
     <script src="./js/lib/jquery-3.3.1.min.js"></script>
     <script src="./js/lib/materialize.min.js"></script>
-    <script src="./js/lib/axios.min.js"></script>
+    <script src="./js/preferences.js"></script>
+    <script src="./js/setting_page.js"></script>
 
     <style>
         .row {
@@ -49,21 +50,21 @@
                                     <div class="row">
                                         <div class="input-field col s12">
                                             <input type="number" id="maxAnswers">
-                                            <label for="maxQuestions">Max number of answers.</label>
+                                            <label for="maxAnswers">Max number of answers.</label>
                                         </div>
                                     </div>
 
                                     <div class="row">
                                         <div class="input-field col s12">
                                             <input type="number" id="maxVotes">
-                                            <label for="maxQuestions">Maximum votes in results.</label>
+                                            <label for="maxVotes">Maximum votes in results.</label>
                                         </div>
                                     </div>
 
                                     <div class="row">
                                         <div class="input-field col s12">
                                             <input type="number" id="minVotes">
-                                            <label for="maxQuestions">Minimum votes in results.</label>
+                                            <label for="minVotes">Minimum votes in results.</label>
                                         </div>
                                     </div>
 
@@ -71,22 +72,22 @@
                                     <div class="row">
                                         <div class="input-field col s12">
                                             <input type="text" id="apiKey">
-                                            <label for="maxQuestions">StackOverflow API key.</label>
+                                            <label for="apiKey">StackOverflow API key.</label>
                                         </div>
                                     </div>
                                     <div class="row">
                                         <div class="input-field col s12">
                                             <p>
                                                 <label>
-                                                    <input type="checkbox" id="isPopMode" />
+                                                    <input type="checkbox" id="isPopupMode" />
                                                     <span>Open In Popup ?</span>
                                                 </label>
                                             </p>
                                         </div>
                                     </div>
                                     <div class="row">
-                                        <a class=" col s12 waves-effect waves-light btn">Update</a>
-                                        <a class=" col s12 waves-effect waves-light btn grey darken-1">Reset to
+                                        <a class=" col s12 waves-effect waves-light btn" id = "update-button">Update</a>
+                                        <a class=" col s12 waves-effect waves-light btn grey darken-1" id = "restore-button">Reset to
                                             defaults</a>
                                     </div>
                                 </form>
