minor fixes in setting_page

--- a/setting_page.html
+++ b/setting_page.html
@@ -42,7 +42,7 @@
                                 <form>
                                     <div class="row">
                                         <div class="input-field col s12 ">
-                                            <input type="number" id="maxQuestions" class="validate">
+                                            <input type="number" id="maxQuestions">
                                             <label for="maxQuestions">Max number of questions. </label>
                                         </div>
                                     </div>
